      cluster map scales now automatically
    - GUI flicker on window resize was reduced
    - better hotkeys were assigned to GUI actions
    - the process of adding/editing/testing of translations
      was highly simplified
    - GUI uses system font respecting global Windows settings anywhere
      except of the list control for which mono-space fonts are more preferred
    - separate Configuration dialog was retired
    - Language Selector was retired
    - ability to run multiple instances simultaneously was added
    - the driver has been completely reworked to increase its reliability
      and flexibility; many complicated algorithms were replaced
      by obvious ones; as a side effect we have a noticeable speedup
      of the volume analysis
    - filter pattern length limitation (4096 characters) was removed
    - added hints about using CHKDSK to get a consistent drive
    - "Tips and Tricks" moved to separate handbook page to be accessible
      from the "Best Practice" help menu item
    - the following translations were added:

      Estonian, Vietnamese(VI), Burmese(Padauk), Spanish(ES)

    - the following translations were updated:

      Portuguese(BR), Czech

    - Developers: dfrg.exe historical name of GUI executable was replaced
      by final name ultradefrag.exe
    - manifest was added to signal Vista and higher that this is a
      high DPI aware application (http://support.microsoft.com/kb/969789)
    - portable.x file became meaningless for the portable edition
    - winx_patcomp, winx_patfind, winx_patfree, winx_wcsdup, winx_vopen,
      winx_vflush, winx_ftw_dump_file, winx_get_free_volume_regions,
      winx_add_volume_region, winx_sub_volume_region,
      winx_release_free_volume_regions, winx_dbg_print_header,
      winx_toupper, winx_tolower functions added to zenwinx library
    - udefrag_get_volume_information function added to udefrag library
    - WgxDbgPrint, WgxDbgPrintLastError, WgxDisplayLastError,