@@ -90,21 +90,27 @@ int get_volume_information(udefrag_job_parameters *jp)
 		DebugPrint("%s partition detected",jp->v_info.fs_name);
 		if(!strcmp(jp->v_info.fs_name,"NTFS")){
 			jp->fs_type = FS_NTFS;
-		} else if(!strcmp(jp->v_info.fs_name,"FAT12")){
-			jp->fs_type = FS_FAT12;
-		} else if(!strcmp(jp->v_info.fs_name,"FAT16")){
-			jp->fs_type = FS_FAT16;
 		} else if(!strcmp(jp->v_info.fs_name,"FAT32")){
-			/* check FAT32 version */
-			if(jp->v_info.fat32_mj_version > 0 || jp->v_info.fat32_mn_version > 0){
-				DebugPrint("cannot recognize FAT32 version %u.%u",
-					jp->v_info.fat32_mj_version,jp->v_info.fat32_mn_version);
-				/* for safe low level access in future releases */
-				jp->fs_type = FS_FAT32_UNRECOGNIZED;
-			} else {
-				jp->fs_type = FS_FAT32;
-			}
+			jp->fs_type = FS_FAT32;
+		} else if(strstr(jp->v_info.fs_name,"FAT")){
+			/* no need to distinguish better */
+			jp->fs_type = FS_FAT16;
 		} else {
+//		} else if(!strcmp(jp->v_info.fs_name,"FAT12")){
+//			jp->fs_type = FS_FAT12;
+//		} else if(!strcmp(jp->v_info.fs_name,"FAT16")){
+//			jp->fs_type = FS_FAT16;
+//		} else if(!strcmp(jp->v_info.fs_name,"FAT32")){
+//			/* check FAT32 version */
+//			if(jp->v_info.fat32_mj_version > 0 || jp->v_info.fat32_mn_version > 0){
+//				DebugPrint("cannot recognize FAT32 version %u.%u",
+//					jp->v_info.fat32_mj_version,jp->v_info.fat32_mn_version);
+//				/* for safe low level access in future releases */
+//				jp->fs_type = FS_FAT32_UNRECOGNIZED;
+//			} else {
+//				jp->fs_type = FS_FAT32;
+//			}
+//		} else {
 			DebugPrint("file system type is not recognized");
 			DebugPrint("type independent routines will be used to defragment it");
 			jp->fs_type = FS_UNKNOWN;
